// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeSelectFormControlOptions should normalize complex select form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controllerName": "user-form",
  "dataSource": null,
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": "User Role",
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "user-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/select",
      "name": "MatSelectModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "InputSelectOptionsDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": true,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "select",
  "label": "User Role",
  "memberList": [],
  "multiple": true,
  "name": "role",
  "nestModule": null,
  "openApi": null,
  "optionList": [
    {
      "display": "Admin",
      "value": "admin",
    },
    {
      "display": "User",
      "value": "user",
    },
  ],
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "select-form-control.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "upstream": null,
  "validatorList": [
    "required",
  ],
}
`;

exports[`NormalizeSelectFormControlOptions should normalize minimal select form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controllerName": "test-form",
  "dataSource": null,
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": null,
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "test-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/select",
      "name": "MatSelectModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/form-system",
      "name": "OptionsFromMethodDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "select",
  "label": null,
  "memberList": [],
  "multiple": false,
  "name": "testSelect",
  "nestModule": null,
  "openApi": null,
  "optionList": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "select-form-control.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "upstream": null,
  "validatorList": [],
}
`;
